--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "@emotion/react": "^11.13.3",
         "@emotion/styled": "^11.13.0",
-        "@mui/material": "^6.1.2"
+        "@mui/material": "^6.1.2",
+        "@mui/x-date-pickers": "^7.22.3",
+        "dayjs": "^1.11.13"
     }
 }
